[package]
name = "secfinding"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
license = "MIT"
authors = ["Corum Collective LLC <engineering@corumcollective.com>"]
repository = "https://github.com/santhsecurity/secfinding"
description = "Universal security finding types — Severity, Evidence, Finding, FindingKind"
readme = "README.md"
keywords = ["security", "findings", "vulnerability", "pentest"]
categories = ["data-structures"]
exclude = ["/target", ".idea", ".vscode", ".DS_Store", "*.swp", "*.profraw"]

[features]
default = []
# json-schema feature temporarily disabled pending proper chrono/uuid schema support
# json-schema = ["dep:schemars"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
# schemars = { version = "0.8", optional = true }
